[package]
name = "rpost"
version = "0.1.0"
authors = ["Salvador Imm <mehdi73ee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.125"
serde_json = "1.0.59"
chrono = { version = "0.4.19", features = ["serde"]}
log = "0.4.14"
fast_log = "1.3.21"
bigdecimal  = "0.2.0"
rbatis =  { version = "2.0.13" }
lazy_static = "1.4.0"